--- a/community-edition/style/theme/xdefault/row.scss
+++ b/community-edition/style/theme/xdefault/row.scss
@@ -105,7 +105,7 @@
   /* ----------  Row  ---------- */
   .InovuaReactDataGrid__row {
     &--scrolling:not(.InovuaReactDataGrid__row--natural-rowheight):not(.InovuaReactDataGrid__row--has-rowspan) {
-      contain: strict !important;
+      // contain: strict !important; // TODO: put this back if we have perf degradation on scrolling
     }
 
     &--scrolling {
