Fix combo scroll container and fix themes variables

--- a/community-edition/packages/Button/style/theme/default-light/variables.scss
+++ b/community-edition/packages/Button/style/theme/default-light/variables.scss
@@ -23,8 +23,8 @@ $INOVUA_BUTTON_PRESSED_HOVER_BG_COLOR: lighten(
 $INOVUA_BUTTON_UNFOCUSED_BORDER: 1px solid $INOVUA_BUTTON_BORDER_COLOR !default;
 $INOVUA_BUTTON_FOCUSED_BORDER: 1px solid $INOVUA_BUTTON_BORDER_COLOR !default;
 
-$INOVUA_BUTTON_COLOR: #7986cb !default;
-$INOVUA_BUTTON_FILL: #7986cb !default;
+$INOVUA_BUTTON_COLOR: $INOVUA_BUTTON_BORDER_COLOR !default;
+$INOVUA_BUTTON_FILL: $INOVUA_BUTTON_BORDER_COLOR !default;
 $INOVUA_BUTTON_FONT_SIZE: 14px !default;
 
 $INOVUA_BUTTON_BOX_SHADOW: 0 0 0 3px rgba($INOVUA_BUTTON_BORDER_COLOR, 0.4) !default;
