--- a/community-edition/packages/RadioButton/style/theme/default-dark/variables.scss
+++ b/community-edition/packages/RadioButton/style/theme/default-dark/variables.scss
@@ -7,7 +7,7 @@
 
 @import '../../variables.scss';
 
-$THEME_NAME: 'default-dark' !default;
+$INOVUA_RADIO_BUTTON_THEME_NAME: 'default-dark' !default;
 $INOVUA_RADIO_BUTTON_PRIMARY_COLOR: #7986cb !default;
 $INOVUA_RADIO_BUTTON_SECONDARY_COLOR: #737f8b !default;
 
