--- a/community-edition/packages/RadioButton/style/theme/default/variables.scss
+++ b/community-edition/packages/RadioButton/style/theme/default/variables.scss
@@ -7,7 +7,7 @@
 
 @import '../../variables.scss';
 
-$THEME_NAME: 'default' !default;
+$INOVUA_RADIO_BUTTON_THEME_NAME: 'default' !default;
 
 $INOVUA_RADIO_BUTTON_PRIMARY_COLOR: #495e85 !default;
 $INOVUA_RADIO_BUTTON_SECONDARY_COLOR: #a5a5a5 !default;
