--- a/community-edition/packages/TextInput/style/theme/default-dark/variables.scss
+++ b/community-edition/packages/TextInput/style/theme/default-dark/variables.scss
@@ -5,7 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'default-dark' !default;
+$TEXT_INPUT_THEME_NAME: 'default-dark' !default;
 
 $INOVUA_TEXT_INPUT_ACCENT_COLOR: #7986cb !default;
 
