--- a/community-edition/style/theme/default-dark/variables.scss
+++ b/community-edition/style/theme/default-dark/variables.scss
@@ -5,9 +5,9 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'default-dark' !default;
+$DATAGRID_THEME_NAME: 'default-dark' !default;
 
-$INOVUA_DATAGRID_ACCENT_BLUE_COLOR: #7986cb !default;
+$INOVUA_DATAGRID_ACCENT_COLOR: #7986cb !default;
 
 $INOVUA_DATAGRID_BORDER_COLOR: #4f575f !default;
 $INOVUA_DATAGRID_BORDER_POSITIVE_COLOR: #a1b6d3 !default;
@@ -38,7 +38,7 @@ $INOVUA_DATAGRID_SORT_ICON_FILL_HOVER: #e8eaf6 !default;
 
 $INOVUA_DATAGRID_GROUP_TOOLBAR_PADDING: 4px !default;
 
-$INOVUA_DATAGRID_ACTION_ROW_BG: $INOVUA_DATAGRID_ACCENT_BLUE_COLOR !default;
+$INOVUA_DATAGRID_ACTION_ROW_BG: $INOVUA_DATAGRID_ACCENT_COLOR !default;
 $INOVUA_DATAGRID_ROW_INDEX_BG: #3a414a !default;
 $INOVUA_DATAGRID_ROW_HOVER_COLOR: rgba(
   $INOVUA_DATAGRID_ACTION_ROW_BG,
@@ -59,35 +59,35 @@ $INOVUA_DATAGRID_ROW_SELECTED_BG_COLOR: rgba(
 
 $INOVUA_DATAGRID_ROW_ODD_BG_COLOR: #343d48 !default;
 $INOVUA_DATAGRID_ROW_ODD_AND_COLUMN_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.30)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.30)
 ) !default;
 $INOVUA_DATAGRID_ROW_ODD_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.15)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.15)
 ) !default;
 $INOVUA_DATAGRID_ROW_ODD_SELECTED_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.25)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.25)
 ) !default;
 $INOVUA_DATAGRID_ROW_ODD_SELECTED_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.35)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.35)
 ) !default;
 
 $INOVUA_DATAGRID_ROW_EVEN_BG_COLOR: #313943 !default;
 $INOVUA_DATAGRID_ROW_EVEN_AND_COLUMN_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.30)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.30)
 ) !default;
 $INOVUA_DATAGRID_ROW_EVEN_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.15)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.15)
 ) !default;
 $INOVUA_DATAGRID_ROW_EVEN_SELECTED_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.25)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.25)
 ) !default;
 $INOVUA_DATAGRID_ROW_EVEN_SELECTED_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.35)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.35)
 ) !default;
 
 $INOVUA_DATAGRID_ROW_ACTIVE_BORDER_WIDTH: 2px !default;
 $INOVUA_DATAGRID_ROW_ACTIVE_BORDER_STYLE: solid !default;
-$INOVUA_DATAGRID_ROW_ACTIVE_BORDER_COLOR: $INOVUA_DATAGRID_ACCENT_BLUE_COLOR !default;
+$INOVUA_DATAGRID_ROW_ACTIVE_BORDER_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR !default;
 $INOVUA_DATAGRID_ROW_ACTIVE_COLOR: #c5cae9 !default;
 
 $INOVUA_DATAGRID_CELL_BORDER_COLOR: #4f575f !default;
@@ -108,7 +108,7 @@ $INOVUA_DATAGRID_LOCKED_ROW_BORDER_COLOR: #616b75 !default;
 
 $INOVUA_DATAGRID_FIELD_BG: rgba(255, 255, 255, 0.1) !default;
 $INOVUA_DATAGRID_FIELD_COLOR: #9ba7b4 !default;
-$INOVUA_DATAGRID_FIELD_HOVER_COLOR: $INOVUA_DATAGRID_ACCENT_BLUE_COLOR !default;
+$INOVUA_DATAGRID_FIELD_HOVER_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR !default;
 $INOVUA_DATAGRID_FIELD_FOCUS_COLOR: rgba(
   $INOVUA_DATAGRID_ACTION_ROW_BG,
   0.4
@@ -143,7 +143,7 @@ $INOVUA_DATAGRID_PROXY_BG: #3b4450 !default;
 $INOVUA_DATAGRID_INVALID_PROXY_BG: #f54 !default;
 
 $INOVUA_DATAGRID_ROW_REORDER_INVALID_ARROW_BG: #f54 !default;
-$INOVUA_DATAGRID_ROW_REORDER_VALID_ARROW_BG: $INOVUA_DATAGRID_ACCENT_BLUE_COLOR !default;
+$INOVUA_DATAGRID_ROW_REORDER_VALID_ARROW_BG: $INOVUA_DATAGRID_ACCENT_COLOR !default;
 
 $INOVUA_DATAGRID_SCROLLBAR_COLOR: #737f8b !default;
 $INOVUA_DATAGRID_SCROLLBAR_TRACK_COLOR: rgba(115, 127, 139, 0.3) !default;
