--- a/community-edition/style/theme/xdefault/index.scss
+++ b/community-edition/style/theme/xdefault/index.scss
@@ -5,7 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'default' !default;
+$DATAGRID_THEME_NAME: 'default' !default;
 
 @import '../../../packages/CheckBox/style/theme/default/index.scss';
 @import '../../../packages/Calendar/style/theme/default/index.scss';
