--- a/community-edition/packages/RadioButton/style/theme/amber-light/index.scss
+++ b/community-edition/packages/RadioButton/style/theme/amber-light/index.scss
@@ -5,7 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'amber-light' !default;
+$INOVUA_RADIO_BUTTON_THEME_NAME: 'amber-light' !default;
 $INOVUA_RADIO_BUTTON_PRIMARY_COLOR: #caae53 !default;
 
 @import '../../../../CheckBox/style/theme/amber-light/index.scss';
