--- a/community-edition/packages/RadioButton/style/theme/default-light/variables.scss
+++ b/community-edition/packages/RadioButton/style/theme/default-light/variables.scss
@@ -5,7 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'default-light' !default;
+$INOVUA_RADIO_BUTTON_THEME_NAME: 'default-light' !default;
 $INOVUA_RADIO_BUTTON_PRIMARY_COLOR: #7986cb !default;
 $INOVUA_RADIO_BUTTON_SECONDARY_COLOR: #99a1aa !default;
 
