--- a/community-edition/packages/RadioButton/style/theme/green-light/index.scss
+++ b/community-edition/packages/RadioButton/style/theme/green-light/index.scss
@@ -5,7 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'green-light' !default;
+$INOVUA_RADIO_BUTTON_THEME_NAME: 'green-light' !default;
 $INOVUA_RADIO_BUTTON_PRIMARY_COLOR: #8bb58d !default;
 
 @import '../default-light/index.scss';
