--- a/community-edition/packages/TextInput/style/theme/amber-dark/index.scss
+++ b/community-edition/packages/TextInput/style/theme/amber-dark/index.scss
@@ -5,7 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'amber-dark' !default;
+$TEXT_INPUT_THEME_NAME: 'amber-dark' !default;
 $INOVUA_TEXT_INPUT_ACCENT_COLOR: #caae53 !default;
 
 @import '../default-dark/index.scss';
