--- a/community-edition/packages/TextInput/style/theme/blue-light/index.scss
+++ b/community-edition/packages/TextInput/style/theme/blue-light/index.scss
@@ -5,7 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'blue-light' !default;
+$TEXT_INPUT_THEME_NAME: 'blue-light' !default;
 $INOVUA_TEXT_INPUT_ACCENT_COLOR: #4bacb8 !default;
 
 @import '../default-light/index.scss';
