--- a/community-edition/packages/TextInput/style/theme/default/variables.scss
+++ b/community-edition/packages/TextInput/style/theme/default/variables.scss
@@ -7,7 +7,7 @@
 
 @import '../../variables.scss';
 
-$THEME_NAME: 'default' !default;
+$TEXT_INPUT_THEME_NAME: 'default' !default;
 
 $INOVUA_TEXT_INPUT_THEME_NAME: 'default' !default;
 $INOVUA_TEXT_INPUT_BORDER_COLOR_FOCUSED: #a1b6d3 !default;
