--- a/community-edition/packages/TextInput/style/theme/pink-light/index.scss
+++ b/community-edition/packages/TextInput/style/theme/pink-light/index.scss
@@ -5,7 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'pink-light' !default;
+$TEXT_INPUT_THEME_NAME: 'pink-light' !default;
 $INOVUA_TEXT_INPUT_ACCENT_COLOR: #dc927b !default;
 
 @import '../default-light/index.scss';
