--- a/community-edition/style/theme/default-light/variables.scss
+++ b/community-edition/style/theme/default-light/variables.scss
@@ -5,9 +5,9 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'default-light' !default;
+$DATAGRID_THEME_NAME: 'default-light' !default;
 
-$INOVUA_DATAGRID_ACCENT_BLUE_COLOR: #7986cb !default;
+$INOVUA_DATAGRID_ACCENT_COLOR: #7986cb !default;
 
 $INOVUA_DATAGRID_BORDER_COLOR: #e4e3e2 !default;
 $INOVUA_DATAGRID_BORDER_POSITIVE_COLOR: #a1b6d3 !default;
@@ -38,7 +38,7 @@ $INOVUA_DATAGRID_SORT_ICON_FILL_HOVER: #99a1aa !default;
 
 $INOVUA_DATAGRID_GROUP_TOOLBAR_PADDING: 4px !default;
 
-$INOVUA_DATAGRID_ACTION_ROW_BG: $INOVUA_DATAGRID_ACCENT_BLUE_COLOR !default;
+$INOVUA_DATAGRID_ACTION_ROW_BG: $INOVUA_DATAGRID_ACCENT_COLOR !default;
 $INOVUA_DATAGRID_ROW_INDEX_BG: #f5f5f5 !default;
 $INOVUA_DATAGRID_ROW_HOVER_COLOR: rgba(
   $INOVUA_DATAGRID_ACTION_ROW_BG,
@@ -59,35 +59,35 @@ $INOVUA_DATAGRID_ROW_SELECTED_BG_COLOR: rgba(
 
 $INOVUA_DATAGRID_ROW_ODD_BG_COLOR: #f8f8f8 !default;
 $INOVUA_DATAGRID_ROW_ODD_AND_COLUMN_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.30)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.30)
 ) !default;
 $INOVUA_DATAGRID_ROW_ODD_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.15)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.15)
 ) !default;
 $INOVUA_DATAGRID_ROW_ODD_SELECTED_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.25)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.25)
 ) !default;
 $INOVUA_DATAGRID_ROW_ODD_SELECTED_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.35)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.35)
 ) !default;
 
 $INOVUA_DATAGRID_ROW_EVEN_BG_COLOR: #fff !default;
 $INOVUA_DATAGRID_ROW_EVEN_AND_COLUMN_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.30)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.30)
 ) !default;
 $INOVUA_DATAGRID_ROW_EVEN_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.15)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.15)
 ) !default;
 $INOVUA_DATAGRID_ROW_EVEN_SELECTED_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.25)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.25)
 ) !default;
 $INOVUA_DATAGRID_ROW_EVEN_SELECTED_HOVER_BG_COLOR: rgba-to-rgb(
-  rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.35)
+  rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.35)
 ) !default;
 
 $INOVUA_DATAGRID_ROW_ACTIVE_BORDER_WIDTH: 2px !default;
 $INOVUA_DATAGRID_ROW_ACTIVE_BORDER_STYLE: solid !default;
-$INOVUA_DATAGRID_ROW_ACTIVE_BORDER_COLOR: $INOVUA_DATAGRID_ACCENT_BLUE_COLOR !default;
+$INOVUA_DATAGRID_ROW_ACTIVE_BORDER_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR !default;
 $INOVUA_DATAGRID_ROW_ACTIVE_COLOR: #555e68 !default;
 
 $INOVUA_DATAGRID_CELL_BORDER_COLOR: #e4e3e2 !default;
@@ -108,7 +108,7 @@ $INOVUA_DATAGRID_LOCKED_ROW_BORDER_COLOR: #e4e3e2 !default;
 
 $INOVUA_DATAGRID_FIELD_BG: rgba(255, 255, 255, 0.1) !default;
 $INOVUA_DATAGRID_FIELD_COLOR: #555e68 !default;
-$INOVUA_DATAGRID_FIELD_HOVER_COLOR: $INOVUA_DATAGRID_ACCENT_BLUE_COLOR !default;
+$INOVUA_DATAGRID_FIELD_HOVER_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR !default;
 $INOVUA_DATAGRID_FIELD_FOCUS_COLOR: rgba(
   $INOVUA_DATAGRID_ACTION_ROW_BG,
   0.4
@@ -141,7 +141,7 @@ $INOVUA_DATAGRID_PROXY_BG: #fff !default;
 $INOVUA_DATAGRID_INVALID_PROXY_BG: #f54 !default;
 
 $INOVUA_DATAGRID_ROW_REORDER_INVALID_ARROW_BG: #f54 !default;
-$INOVUA_DATAGRID_ROW_REORDER_VALID_ARROW_BG: $INOVUA_DATAGRID_ACCENT_BLUE_COLOR !default;
+$INOVUA_DATAGRID_ROW_REORDER_VALID_ARROW_BG: $INOVUA_DATAGRID_ACCENT_COLOR !default;
 
 $INOVUA_DATAGRID_SCROLLBAR_COLOR: rgba(168, 172, 176, 0.8) !default;
 $INOVUA_DATAGRID_SCROLLBAR_TRACK_COLOR: rgba(168, 172, 176, 0.4) !default;
