--- a/community-edition/style/theme/pink-light/index.scss
+++ b/community-edition/style/theme/pink-light/index.scss
@@ -5,8 +5,8 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-$THEME_NAME: 'pink-light' !default;
-$INOVUA_DATAGRID_ACCENT_BLUE_COLOR: #dc927b !default;
+$DATAGRID_THEME_NAME: 'pink-light' !default;
+$INOVUA_DATAGRID_ACCENT_COLOR: #dc927b !default;
 
 @import '../../../packages/CheckBox/style/theme/pink-light/index.scss';
 @import '../../../packages/Calendar/style/theme/pink-light/index.scss';
