--- a/community-edition/style/theme/xdefault/cell-filters.scss
+++ b/community-edition/style/theme/xdefault/cell-filters.scss
@@ -7,7 +7,7 @@
 
 @import './variables.scss';
 
-.InovuaReactDataGrid--theme-#{$THEME_NAME} {
+.InovuaReactDataGrid--theme-#{$DATAGRID_THEME_NAME} {
   .InovuaReactDataGrid__column-header__filter-wrapper {
     // min-height: $INOVUA_DATAGRID_FILTER_ROW_HEIGHT;
     border: 0;
