--- a/community-edition/style/theme/xdefault/header-menu-tool.scss
+++ b/community-edition/style/theme/xdefault/header-menu-tool.scss
@@ -7,7 +7,7 @@
 
 @import './variables.scss';
 
-.InovuaReactDataGrid--theme-#{$THEME_NAME} {
+.InovuaReactDataGrid--theme-#{$DATAGRID_THEME_NAME} {
   .InovuaReactDataGrid__column-header__menu-tool {
     border-left: none;
     border-right: none;
