--- a/community-edition/style/theme/xdefault/row.scss
+++ b/community-edition/style/theme/xdefault/row.scss
@@ -7,7 +7,7 @@
 
 @import './variables.scss';
 
-.InovuaReactDataGrid--theme-#{$THEME_NAME} {
+.InovuaReactDataGrid--theme-#{$DATAGRID_THEME_NAME} {
   .InovuaReactDataGrid__footer-rows-container {
     border-top: 1px solid $INOVUA_DATAGRID_HEADER_BORDER_COLOR;
   }
@@ -33,14 +33,14 @@
   }
 
   .InovuaReactDataGrid__row-resize-indicator--hovered {
-    background: $INOVUA_DATAGRID_ACCENT_BLUE_COLOR;
+    background: $INOVUA_DATAGRID_ACCENT_COLOR;
   }
 
   .InovuaReactDataGrid__row-resize-indicator--active {
-    background: rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.5);
+    background: rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.5);
 
     &.InovuaReactDataGrid__row-resize-indicator--mobile {
-      background: rgba($INOVUA_DATAGRID_ACCENT_BLUE_COLOR, 0.5);
+      background: rgba($INOVUA_DATAGRID_ACCENT_COLOR, 0.5);
     }
   }
 
