Add custom themes on DataGrid

--- a/community-edition/style/theme/default-dark/index.scss
+++ b/community-edition/style/theme/default-dark/index.scss
@@ -6,6 +6,47 @@
  */
 
 $DATAGRID_THEME_NAME: 'default-dark' !default;
+$INOVUA_DATAGRID_ACCENT_COLOR: #7986cb !default;
+
+$INOVUA_ARROW_SCROLLER_THEME_NAME: $DATAGRID_THEME_NAME;
+
+$INOVUA_BUTTON_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_BUTTON_MAIN_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_CALENDAR_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_CALENDAR_MAIN_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_CHECKBOX_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_CHECKBOX_PRIMARY_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_COMBO_BOX_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_COMBO_BOX_MAIN_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_LOAD_MASK_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_LOAD_MASK_MAIN_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_MENU_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_MENU_PRIMARY_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_NUMERIC_INPUT_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_NUMERIC_PRIMARY_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_PAGINATION_TOOLBAR_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_PAGINATION_TOOLBAR_MAIN_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_RADIO_BUTTON_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_RADIO_BUTTON_PRIMARY_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_RADIO_BUTTON_GROUP_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_RADIO_BUTTON_GROUP_PRIMARY_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_SCROLL_CONTAINER_THEME_NAME: $DATAGRID_THEME_NAME;
+
+$TEXT_INPUT_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_TEXT_INPUT_ACCENT_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
+
+$INOVUA_TOOLBAR_THEME_NAME: $DATAGRID_THEME_NAME;
+$INOVUA_TOOLBAR_PRIMARY_COLOR: $INOVUA_DATAGRID_ACCENT_COLOR;
 
 @import '../../../packages/CheckBox/style/theme/default-dark/index.scss';
 @import '../../../packages/Calendar/style/theme/default-dark/index.scss';
