--- a/examples/pages/custom-theme/magenta-dark.scss
+++ b/examples/pages/custom-theme/magenta-dark.scss
@@ -1,4 +1,4 @@
-$DATAGRID_THEME_NAME: 'orange-dark';
-$INOVUA_DATAGRID_ACCENT_COLOR: #855703;
+$DATAGRID_THEME_NAME: 'magenta-dark';
+$INOVUA_DATAGRID_ACCENT_COLOR: #860a86;
 
 @import '@inovua/reactdatagrid-community/style/theme/default-dark/index.scss';
