--- a/examples/pages/index.scss
+++ b/examples/pages/index.scss
@@ -25,6 +25,10 @@
   color: #ef9a9a;
 }
 
+.global-row-background-tomato.global-row-background-tomato.global-row-background-tomato {
+  background: #6d4040;
+}
+
 .global-group-color-tomato.global-group-color-tomato.global-group-color-tomato {
   color: #ef9a9a;
   font-style: italic;
