--- a/examples/pages/index.scss
+++ b/examples/pages/index.scss
@@ -73,3 +73,32 @@
     justify-content: center;
   }
 }
+
+.prop-group-by-sticky__button {
+  height: 32px;
+  width: 230px;
+  margin: 8px 16px 8px 0;
+  background: #222b37;
+  color: #dadada;
+  border: 1px solid #7a7a7a;
+  border-radius: 4px;
+  padding: 0 16px;
+  transition: all 0.2s ease-in-out;
+  user-select: none;
+}
+
+.prop-group-by-sticky__button:hover {
+  opacity: 0.8;
+  transform: scale(1.05);
+}
+
+.prop-group-by-sticky__button:active {
+  transform: translateY(1px);
+  transform: scale(1.2);
+}
+
+.prop-group-by-sticky__grid {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 250px 250px;
+}
