--- a/community-edition/style/base.scss
+++ b/community-edition/style/base.scss
@@ -174,6 +174,17 @@
   position: relative;
 }
 
+.InovuaReactDataGrid__header-layout__sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+.InovuaReactDataGrid--sticky-header .InovuaReactDataGrid__body {
+  overflow: visible;
+  contain: paint;
+}
+
 .InovuaReactDataGrid__header {
   flex: none;
 }
